# Technical-Portfolio

./: README.md  circuit1a.circ
16-Bit CPU Circuit/: README.md  cpu.circ
C Programming/Dynamic Data Handling and Recursive Computation/: byseven.c
C Programming/Multi-Level Queue Dispatcher/: main.c  pcb.c  pcb.h  random.c
C Programming/Parallel Synchronization in Multi-threaded Lab Simulation/: README.md  assigngroups.c
C Programming: Dynamic Data Handling and Recursive Computation/: BuildEff.c  README.md  recurse.c
CFD Solver Code/: solver_2d.f90  solver_2d_inputs.namelist  table_showing_the_computed_lift_and_drag_coefficients_hw_06_problem_part_3.2.txt  update.f90  van_leer_flux.f90  wall_fluxes.f90
DNA Manipulation Simulator/: IDnaStrand.java  README.md  StringStrand.java
Digital Logic Circuits: Finite State Machines, Adders, and Boolean Algebra/: circuit1c.circ
Huffman Coding Compression and Decompression/: BitOutputStream.java  HuffMainDecompress.java  README.md
Huffman Coding Compression and Decompression/Data/: mandrill.tiff
Java Programming/DNA Manipulation Simulator/: CharDnaIterator.java  DNABenchmark.java  LinkStrand.java  README.md  StringBuilderStrand.java
Java Programming/Huffman Coding Compression and Decompression/: BitInputStream.java  FileSelector.java  HuffMainCompress.java  HuffProcessor.java
Java Programming/Markov Model/: BaseMarkov.java  HashMarkov.java  MarkovDriver.java  MarkovInterface.java  MarkovTest.java  TextSource.java
Java Programming/US Map Route Planner/: GraphProcessor.java  TestSimpleGraphProcessor.java  TestUSGraphProcessor.java  Visualize.java
Java Programming/Word Completion Predictor/: AutocompleteGUI.java  AutocompleteMain.java  Autocompletor.java  BenchMarkForAutocomplete.java  BinaryBenchmark.java  BinarySearchAutocomplete.java  HashListAutocomplete.java  PrefixComparator.java  README.md  TestBinarySearchLibrary.java  TestHashListAutocomplete.java
MIPS Assembly Language Programming/: README.md  byseven.s
MIPS Assembly Language Programming: Recursion, Computations, and Dynamic Structures/: BuildEff.s  recurse.s
Markov Model/: README.md  WordGram.java  WordGramTest.java
Multi-Level Queue Dispatcher/: README.md  main.h
Papers/: README.md
Parallel Synchronization in Multi-threaded Lab Simulation/: Makefile
Research: Deep Learning And Parallelism in Computational Fluid Dynamics/: start_up.f90
Research: Deep Learning And Parallelism in Computational Fluid Dynamics/Kokkos Programming/: CMakeLists.txt  Cuda_Aware_MPI_Kokkos_Demo.cpp  Exercise_1.cpp  Exercise_2_Begin.cpp  Exercise_MPI_Kokkos_Timers_Profiling.cpp  Exercise_Parallel_Scan.cpp  Exercise_Parallel_Scan_Full.cpp  README.md  sourceme.sh
US Map Route Planner/: Point.java  README.md
Word Completion Predictor/: BinarySearchLibrary.java  BruteAutocomplete.java  README.md  Term.java  TestBinarySearchAutocomplete.java  TestTerm.java
(+59 files in other folders)
